--- a/appointment.html
+++ b/appointment.html
@@ -12,68 +12,32 @@
     <p><a href="home_page.html">Trang Chủ</a>   <a href="service.html">Dịch vụ</a>   <a href="appointment.html">Đăng ký lịch khám</a></p>
     </div>
     <div class="appointment">
-    <table cellpadding="8" cellspacing="0" align="center">
-    <tbody>
-    <tr>
-        <td><label >Họ và tên:</label></td>
-    </tr>    
-    <tr>   
-        <td>
-            <input type="text" name="name" maxlength="50"  placeholder="Nhập họ tên">
-        </td>
-    </tr>
-    <tr>
-        <td><label>Email:</label></td>
-    </tr>
-    <tr>
-        <td>
-            <input type="email" name="email" required placeholder="example@gmail.com">
-        </td>
-    </tr>
-    <tr>
-        <td><label>Số điện thoại</label></td>
-    </tr>
-    <tr>
-        <td>
-            <input type="tel" id="tel" name="tel" required pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-        </td>
-    </tr>
-    <tr>
-        <td><label>Chọn dịch vụ</label></td>
-    </tr>
-    <tr>
-        <td>
+
+        <label for="name">Họ và tên:</label>
+        <input type="text" name="name" maxlength="50"  placeholder="Nhập họ tên">
+        <br>
+        <label>Email:</label>
+        <input type="email" name="email" required placeholder="example@gmail.com">
+        <br>
+        <label>Số điện thoại</label>
+        <input type="tel" id="tel" name="tel" required pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+        <br>
+        <label>Chọn dịch vụ</label>
             <select id="service" name="service" required>
                 <option value="general_checkup" selected>Khám răng tổng quát</option>
                 <option value="teeth_cleaning">Lấy cao răng</option>
                 <option value="teeth_whitening">Tẩy trắng răng</option>
                 <option value="braces">Niềng răng</option>
             </select>
-        </td>
-    </tr>
-    <tr>
-        <td><label>Ngày khám</label></td>
-    </tr>
-    <tr>
-        <td>
-            <input type="date" id="appointment_date" name="appointment_date" required>
-        </td>
-    </tr>
-    <tr>
-        <td><label>Ghi chú thêm</label></td>
-    </tr>
-    <tr>    
-        <td>
-            <textarea id="notes" name="notes" rows="2" cols="26" placeholder="Yêu cầu thêm..."></textarea>
-        </td>
-    </tr>
-    <tr>
-        <td align="center">
+            <br>
+        <label>Ngày khám</label>
+        <input type="date" id="appointment_date" name="appointment_date" required>
+        <br>
+        <label>Ghi chú thêm</label>
+        <textarea id="notes" name="notes" rows="2" cols="26" placeholder="Yêu cầu thêm..."></textarea>
+        <br>
             <input type="submit" value="Gửi đăng ký">
-        </td>
-    </tr>
-    </tbody>
-    </table>
+            <br>
     </div>
     <div class="footer">
     <p>&copy; 2026 Nha Khoa Chăm Sóc Nụ Cười Việt</p>
